Lots of changes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
         <a href=""><img src="./logos/Walmart.svg" alt="" /></a>
       </section>
       <!-- Logo Items End -->
+      <!-- Popular Collection Start -->
+      <section class="popular-section">
+        <h2>Popular Collection</h2>
+        <div class="cards">
+          <div class="card">
+            <img src="./images/tripod.png" alt="" />
+            <h2>Card-1</h2>
+            <h2>$100</h2>
+          </div>
+        </div>
+      </section>
+      <!-- Popular Collection End -->
     </main>
   </body>
 </html>
