--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     ></script>
     <!-- Style Sheet -->
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Gears</title>
   </head>
   <body>
@@ -61,13 +65,80 @@
       </section>
       <!-- Logo Items End -->
       <!-- Popular Collection Start -->
+      <h2>Popular Collection</h2>
       <section class="popular-section">
-        <h2>Popular Collection</h2>
         <div class="cards">
           <div class="card">
-            <img src="./images/tripod.png" alt="" />
+            <div class="image">
+              <img src="./images/tripod.png" alt="" />
+            </div>
             <h2>Card-1</h2>
             <h2>$100</h2>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="./images/tripod.png" alt="" />
+            </div>
+            <h2>Card-1</h2>
+            <h2>$100</h2>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="./images/tripod.png" alt="" />
+            </div>
+            <h2>Card-1</h2>
+            <h2>$100</h2>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="./images/tripod.png" alt="" />
+            </div>
+            <h2>Card-1</h2>
+            <h2>$100</h2>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="./images/tripod.png" alt="" />
+            </div>
+            <h2>Card-1</h2>
+            <h2>$100</h2>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="./images/tripod.png" alt="" />
+            </div>
+            <h2>Card-1</h2>
+            <h2>$100</h2>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
           </div>
         </div>
       </section>
